--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -82,6 +82,8 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    margin-bottom: 70px;
 }
 
 .card{
@@ -196,6 +198,27 @@ body{
     line-height: 14px;
     font-weight: 400;
     color: #FFFFFF;
+}
+
+.footer{
+    width: 100%;
+    height: 70px;
+
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    z-index: 1;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    background-color: #FFFFFF;
+
+    font-family: 'Recursive', sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    color: #333333;
 }
 
 
