--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -97,8 +97,8 @@ body{
     border-radius: 5px;
 
     font-family: 'Recursive', sans-serif;
-    
-    backface-visibility: hidden;
+
+    position: relative;
 }
 
 .question{
@@ -118,23 +118,24 @@ body{
     font-size: 30px;
 }
 
-.front{
+.face{
     width: 100%;
     height: 130px;
 
-    margin-bottom: 25px;
-    
     font-size: 18px;
     font-weight: 400;
     color: #333333;
     line-height: 22px;
-
     background-color: #FFFFD4;
     box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.15);
     border-radius: 5px;
     padding: 15px;
 
-    position: relative;
+    position: absolute;
+
+    backface-visibility: hidden;
+    transition: all .3s;
+    transform-style: preserve-3d;
 }
 
 .front img{
@@ -145,19 +146,7 @@ body{
     right: 10px;
 }
 
-.back {
-    width: 100%;
-    height: 130px;
-
-    background-color: #FFFFD4;
-    background: #FFFFD5;
-    box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.15);
-    border-radius: 5px;
-
-    position: relative;
-}
-
-.back h3{
+.face .back h3{
     font-family: 'Recursive', sans-serif;
     font-style: normal;
     font-weight: 400;
@@ -169,6 +158,18 @@ body{
     margin: 0 15px;
     margin-top: 15px;
     word-wrap: break-word;
+}
+
+.back{
+    transform: rotateY(180deg);
+}
+
+.hideFront{
+    transform: rotateY(-180deg);
+}
+
+.showBack{
+    transform: rotateY(0deg);
 }
 
 .results{
