--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -210,10 +210,6 @@ body{
     right: 0;
     z-index: 1;
 
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
     background-color: #FFFFFF;
 
     font-family: 'Recursive', sans-serif;
@@ -222,7 +218,28 @@ body{
     color: #333333;
 }
 
+.resultsContainer{
+    width: 100%;
+    height: 100%;
 
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    
+    position:relative;
+}
+
+.resultsContainer p{
+    margin-bottom: 15px;
+}
+
+.answerResults{
+    
+    position: absolute;
+    bottom: 5px;
+    font-size: 23px;
+}
 
 
 
