--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -83,7 +83,7 @@ body{
     flex-direction: column;
     align-items: center;
 
-    margin-bottom: 70px;
+    margin-bottom: 85px;
 }
 
 .card{
@@ -122,14 +122,14 @@ body{
     width: 100%;
     height: 130px;
 
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 400;
     color: #333333;
     line-height: 22px;
     background-color: #FFFFD4;
     box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.15);
     border-radius: 5px;
-    padding: 15px;
+    padding: 5px 0px;
 
     position: absolute;
 
@@ -146,18 +146,20 @@ body{
     right: 10px;
 }
 
-.face .back h3{
+.face h3{
     font-family: 'Recursive', sans-serif;
     font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 22px;
+    font-weight: 400;  
 
     color: #333333;
 
     margin: 0 15px;
-    margin-top: 15px;
     word-wrap: break-word;
+}
+
+.front h3{
+    margin-top: 15px;
+    font-size: 20px;
 }
 
 .back{
@@ -203,7 +205,7 @@ body{
 
 .footer{
     width: 100%;
-    height: 70px;
+    height: 85px;
 
     position: fixed;
     bottom: 0;
@@ -231,7 +233,7 @@ body{
 }
 
 .resultsContainer p{
-    margin-bottom: 15px;
+    margin-bottom: 25px;
 }
 
 .answerResults{
@@ -241,7 +243,30 @@ body{
     bottom: 5px;
     font-size: 23px;
 }
+.finalMessage{
+    width: 100%;
+    height: 100px;
 
+    position: fixed;
+    bottom: 85px;
+    right: 0;
+
+    padding: 0 15px;
+    padding-top: 25px;
+
+    background-color:#FFFFFF;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+
+    text-align: center;
+}
+
+.finalMessage p{
+    margin-top: 10px;
+}
 
 
 
