--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -122,7 +122,7 @@ body{
     width: 100%;
     height: 130px;
 
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 400;
     color: #333333;
     line-height: 22px;
@@ -136,6 +136,19 @@ body{
     backface-visibility: hidden;
     transition: all .3s;
     transform-style: preserve-3d;
+
+    display: flex;
+    justify-content: center;
+
+    text-align: center;
+}
+
+.front{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    padding: 0;
 }
 
 .front img{
@@ -158,12 +171,27 @@ body{
 }
 
 .front h3{
-    margin-top: 15px;
     font-size: 20px;
+
+    display: flex;
+    align-items: center;
+    text-align: center;
 }
 
 .back{
     transform: rotateY(180deg);
+
+    display: flex;
+    flex-direction: column;
+}
+
+.answer{
+    height: 50%;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 15px;
 }
 
 .hideFront{
@@ -176,14 +204,11 @@ body{
 
 .results{
     width: 100%;
+    height: 50%;
     
     display: flex;
     justify-content: space-between;
     padding: 15px 15px;
-
-    position: absolute;
-    bottom: 0;
-    right: 0;
 }
 
 .result{
@@ -243,6 +268,7 @@ body{
     bottom: 5px;
     font-size: 23px;
 }
+
 .finalMessage{
     width: 100%;
     height: 100px;
@@ -267,18 +293,6 @@ body{
 .finalMessage p{
     margin-top: 10px;
 }
-
-
-
-
-
-
-
-
-
-
-
-
 
 .hidden{
     display: none;
