--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -16,7 +16,7 @@ body{
     width: 100%;
     height: 100%;
 
-    margin-top: 45%;
+    margin-top:200px;
 
     display: flex;
     flex-direction: column;
@@ -274,7 +274,7 @@ body{
     height: 100px;
 
     position: fixed;
-    bottom: 85px;
+    bottom: 83px;
     right: 0;
 
     padding: 0 15px;
